# homework

./: .gitignore  6.7.2.cpp  CMakeLists.txt  Exercise2_1  Problem_1_10_1.cxx  Problem_1_10_2.cxx  Problem_1_10_3.cxx  README.md  a.out  e1.cpp  e1.hpp  e2.cpp  e2.hpp  e3.cpp  e3.hpp  test.cpp
Quiz/: CMakeLists.txt  solution.h
Quiz1/: CMakeLists.txt  MatrixMarket.txt  solution.cpp  solution.h
Quiz2/: quiz.cxx  unique.cpp  unique.h
Week1/: Exercise1  Exercise1.cpp  Exercise2  Exercise2_1.cpp  Exercise2_2  Exercise2_2.cpp  Exercise3  Exercise3.cpp
Week10/: Exercise  Exercise1.cpp  Exercise2  Exercise2.cpp
Week2/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  code.cpp
Week5/: CMakeLists.txt  oop.cpp
Week6/: CMakeLists.txt  direction.cpp  direction.h  particle.cpp  particle.h  position.cpp  position.h
Week7/: Exercise1  Exercise1.cpp  Exercise3  Exercise3.cpp
Week8/: Vector  Vector.cpp
Week9/: =  Functor  Functor.cpp  Lambda  Lambda.cpp  Trapezoid  Trapezoid.cpp
homework/2017-06-05/: 1.10.1.cpp  1.10.2a.cpp  1.10.2b.cpp  1.10.3.cpp  CMakeLists.txt
homework/2017-06-12/: 2.10.cpp  CMakeLists.txt  managed_res.cpp  old_res.cpp  old_res.h  polynom.cpp  polynom.h
homework/2017-07-03/: 6.7.1.cpp  CMakeLists.txt
homework/2017-07-17/: 3.11.1.cpp  3.11.13.cpp  3.11.3.cpp  CMakeLists.txt
homework/2017-07-25/: 3.11.4.cpp  3.11.7.cpp  3.11.9.cpp  CMakeLists.txt
homework/2017-08-03/: 3.11.10.cpp  3.11.11.cpp  3.11.12.cpp  CMakeLists.txt
homework/2017-08-10/: 4.8.1.cpp  4.8.2.cpp  CMakeLists.txt
homework_w1/: hw1_1.cpp  hw1_2_1.cpp  hw1_2_2.cpp  hw1_3.cpp
hw01/: 10.1.cpp
hw01/10.1/: Makefile
hw01/10.2/: 10.2.cpp  Makefile
hw01/10.3/: 10.3.cpp  Makefile
hw02/: 2.8.cpp  Makefile
hw02/2.8.1/: 2.8.1.cpp  Makefile
hw03/: 6.7.1.cpp  Makefile
hw1/: Makefile  p_1_10_1.cpp  p_1_10_2.cpp  p_1_10_3.cpp
hw10/: Makefile  p_4_8_1.cpp  p_4_8_2.cpp
hw2/: Makefile  p_2_8_1.cpp  polynomial.cpp  polynomial.hpp
hw5/: Makefile  p_6_7_1.cpp  people.cpp  people.hpp
hw6/: Makefile  event.cpp  event.hpp  particle.cpp  particle.hpp  test_event.cpp  test_particle.cpp  uniqueid.cpp  uniqueid.hpp  vectors.cpp  vectors.hpp
hw7/: Makefile  p_3_11_1.cpp  p_3_11_3.cpp
hw8/: Makefile  p_3_11_4.cpp  p_3_11_7.cpp  p_3_11_9.cpp  stack.cpp  stack.hpp
hw9/: Makefile  p_3_11_10.cpp  p_3_11_11.cpp
kkrings/chapter01/: exercise_1.10.1.cpp  exercise_1.10.2.cpp  exercise_1.10.3.cpp
kkrings/chapter01/matrix_market/: CMakeLists.txt  example.cpp  matrix_market.cpp  matrix_market.hpp
kkrings/chapter02/: exercise_2.8.cpp
kkrings/chapter02/unique_id/: CMakeLists.txt  main.cpp  particle.cpp  particle.hpp  unique_id.cpp  unique_id.hpp
kkrings/chapter03/: exercise_3.11.1.cpp  exercise_3.11.12.cpp  exercise_3.11.4.cpp  exercise_3.11.8.cpp
kkrings/chapter06/: exercise_6.7.1.cpp
kkrings/pokeball/: CMakeLists.txt  main.cpp  particle.cpp  particle.hpp  unique_id.cpp
mmatrix/: CMakeLists.txt  mmatrix.cpp  mmatrix.hpp
modern_cpp_examples/1.1_basics/: hello42  hello42.cpp
modern_cpp_examples/3.1.3_complex_num_err/: template.cpp
quiz02/: Makefile  quiz.cpp  test.cpp
quiz1/: CMakeLists.txt  Makefile  mreader.cpp  mreader.hpp
quiz1/src/: CMakeLists.txt  CMakeLists.txt~  exercise_1_10_3.cpp  exercise_1_10_3.hpp  quiz1.cpp  quiz1.cpp~  quiz1.hh
quiz3/: Makefile  testids.cpp  uniqueid.cpp  uniqueid.hpp
quiz7/: Makefile  p_3_11_8.cpp
quiz_week_3/src/: CMakeLists.txt  particle.hpp  test_unique_id.cpp  unique_id.cpp  unique_id.hpp
quizes/1/: CMakeLists.txt  MatrixMarket.csv  quiz1.cpp  quiz1.h
quizes/2/: CMakeLists.txt  quiz2.cpp
quizes/3/: CMakeLists.txt
quizes/4/: CMakeLists.txt  quiz4.cpp
week-1/1.10.1/: ask_age.cxx
week-1/1.10.2/: arrays_and_pointers_1.cpp  arrays_and_pointers_2.cpp
week-1/1.10.3/: matrix  matrix.cpp
week-1/quiz/: CMakeLists.txt  matrix_market.txt  quiz.cpp  quiz.cxx  quiz.hpp  quiz.hxx
week-2/: polynomial.cpp  polynomial.hpp
week1/: 1_10_1.cpp  1_10_2.cpp  1_10_3.cpp  CMakeLists.txt  MatrixMarket.txt  README  ex1.10.1.cpp  ex1.10.2a.cpp  ex1.10.2b.cpp  ex1.10.3.cpp  run_valgrind_1_10_2  task_1_10_1  task_1_10_1.cpp  task_1_10_2a  task_1_10_2a.cpp
week1/exe_1.10.1/: src_1.cc
week1/exe_1.10.2/: out  src_1.cc  src_2.cc
week1/exe_1.10.3/: example_matrix_market  out  src_1.cc
week1/quiz/: CMakeLists.txt  homework
week1/quiz/src/: src_1.cc
week1/src/: CMakeLists.txt  Makefile  excercise_1_10_1  excercise_1_10_1.cpp  excercise_1_10_2  excercise_1_10_2_a.cpp  excercise_1_10_2_b.cpp  excercise_1_10_3  excercise_1_10_3.cpp
week10/src/: CMakeLists.txt  excercise_4_8_1.cpp  excercise_4_8_2.cpp
week2/: poly  poly.cpp  poly.h
week2-3/: .gitignore
week2-3/_src/: CMakeLists.txt  task_2_8_1.cpp
week2/exe/2.8.1/: polynomials.cc  polynomials.h
week2/exe/2.8.2/: polynomials.cc  (+1 more)
week2/src/: CMakeLists.txt  exercise_polynomial.cpp  exercise_polynomial.hpp
week3/exe/: person.cc  person.h  student.h
week5/: oop_simple.cpp
week5/src/: CMakeLists.txt  person.hpp  test.cpp
week6/src/: CMakeLists.txt  README.txt  direction.cpp  direction.hpp  four_vector.cpp  four_vector.hpp  particle.cpp  particle.hpp  particle_properties.cpp  particle_properties.hpp  position.cpp  position.hpp  test.cpp  unique_id.cpp  unique_id.hpp
week7/src/: CMakeLists.txt  excercise_3_11_1.cpp  excercise_3_11_3.cpp  excercise_3_11_8.cpp
week8/src/: CMakeLists.txt  excercise_3_11_4.cpp  excercise_3_11_7.cpp  excercise_3_11_9.cpp
week9/src/: CMakeLists.txt  excercise_3_11_10_generic_programming.cpp  excercise_3_11_10_inheritance.cpp  excercise_3_11_11.cpp  excercise_3_11_12.cpp  excercise_3_11_13.cpp
week_01/: excercise_1_10_1.cpp  excercise_1_10_2.cpp  excercise_1_10_3.cpp
week_01/Quiz/: CMakeLists.txt  Quiz_1.cpp  matrix_reader.cpp  matrix_reader.h
(+2 files in other folders)
